<resources>
    <string name="app_name">ProjectFarrelMobileProgramming</string>
    <string name="ui_klik_tombol_di_bawah_untuk_mel_1">Klik tombol di bawah untuk melacak lokasi Anda saat ini. Kami memerlukan izin lokasi untuk fitur ini.</string>
    <string name="ui_dapatkan_lokasi_terkini_2">Dapatkan Lokasi Terkini</string>
    <string name="ui_kordinat_persis_3">Kordinat Persis:</string>
    <string name="ui_latitude_nlongitude_4">Latitude: -\nLongitude: -</string>
    <string name="ui_manajemen_kurikulum_5">Manajemen Kurikulum</string>
    <string name="ui_sistem_berbasis_obe_6">Sistem Berbasis OBE</string>
    <string name="ui_prodi_amp_cpl_7">Prodi &amp;amp; CPL</string>
    <string name="ui_mata_kuliah_amp_bk_8">Mata Kuliah &amp;amp; BK</string>
    <string name="ui_pemetaan_mapping_9">Pemetaan (Mapping)</string>
    <string name="ui_rps_amp_sub_cpmk_10">RPS &amp;amp; Sub-CPMK</string>
    <string name="ui_rencana_tugas_11">Rencana Tugas</string>
    <string name="ui_hasil_asesmen_12">Hasil Asesmen</string>
    <string name="ui_pengaturan_profil_13">Pengaturan Profil</string>
    <string name="ui_lokasi_kehadiran_14">Lokasi Kehadiran</string>
    <string name="ui_catatan_offline_15">Catatan (Offline)</string>
    <string name="ui_pilih_jenis_pemetaan_16">Pilih Jenis Pemetaan</string>
    <string name="ui_tampilkan_data_pemetaan_17">Tampilkan Data Pemetaan</string>
    <string name="ui_lihat_daftar_bahan_kajian_bk_18">Lihat Daftar Bahan Kajian (BK)</string>
    <string name="ui_nama_mata_kuliah_19">Nama Mata Kuliah</string>
    <string name="ui_kode_mk_20">Kode MK</string>
    <string name="ui_if001_21">IF001</string>
    <string name="ui_sks_22">SKS</string>
    <string name="ui_semester_23">Semester</string>
    <string name="ui_daftar_cpmk_capaian_pembelajar_24">Daftar CPMK (Capaian Pembelajaran Mata Kuliah)</string>
    <string name="ui_tidak_ada_data_cpmk_untuk_mata_25">Tidak ada data CPMK untuk Mata Kuliah ini.</string>
    <string name="ui_tulis_catatan_baru_26">Tulis catatan baru...</string>
    <string name="ui_simpan_catatan_27">Simpan Catatan</string>
    <string name="ui_daftar_catatan_tersimpan_28">Daftar Catatan Tersimpan:</string>
    <string name="ui_nama_prodi_29">Nama Prodi</string>
    <string name="ui_data_pengguna_tersimpan_lokal_30">Data Pengguna (Tersimpan Lokal)</string>
    <string name="ui_masukkan_nama_anda_31">Masukkan Nama Anda</string>
    <string name="ui_masukkan_nim_anda_32">Masukkan NIM Anda</string>
    <string name="ui_simpan_profil_33">Simpan Profil</string>
    <string name="ui_profil_saat_ini_34">Profil Saat Ini:</string>
    <string name="ui_belum_ada_data_35">Belum ada data.</string>
    <string name="ui_tidak_ada_data_36">Tidak ada data.</string>
    <string name="ui_20260001_37">20260001</string>
    <string name="ui_tugas_38">Tugas</string>
    <string name="ui_nama_mahasiswa_39">Nama Mahasiswa</string>
    <string name="ui_bobot_cpl_20_40">Bobot CPL: 20%</string>
    <string name="ui_cpl_01_41">CPL-01</string>
    <string name="ui_mampu_menganalisis_kebutuhan_42">Mampu menganalisis kebutuhan...</string>
    <string name="ui_cpmk_if001_1_43">CPMK-IF001-1</string>
    <string name="ui_cpl01_44">→ CPL01</string>
    <string name="ui_mahasiswa_mampu_menjelaskan_ko_45">Mahasiswa mampu menjelaskan konsep...</string>
    <string name="ui_id_46">ID</string>
    <string name="ui_deskripsi_47">Deskripsi...</string>
    <string name="ui_asal_48">Asal</string>
    <string name="ui_id_source_49">ID_SOURCE</string>
    <string name="ui_tujuan_50">Tujuan</string>
    <string name="ui_id_target_51">ID_TARGET</string>
    <string name="ui_pemrograman_mobile_52">Pemrograman Mobile</string>
    <string name="ui_3_sks_53">3 SKS</string>
    <string name="ui_semester_5_54">Semester 5</string>
    <string name="ui_if301_55">IF301</string>
    <string name="ui_catatan_di_sini_56">Catatan di sini...</string>
    <string name="ui_waktu_57">Waktu</string>
    <string name="ui_sistem_informasi_58">Sistem Informasi</string>
    <string name="ui_jenjang_s1_59">Jenjang: S1</string>
    <string name="ui_kode_si_60">Kode: SI</string>
    <string name="ui_si301_61">SI301</string>
    <string name="ui_approved_62">Approved</string>
    <string name="ui_dr_dosen_pengampu_63">Dr. Dosen Pengampu</string>
    <string name="ui_disusun_2026_09_12_64">Disusun: 2026-09-12</string>
    <string name="ui_deskripsi_mata_kuliah_65">Deskripsi mata kuliah...</string>
    <string name="ui_bentuk_tugas_66">Bentuk Tugas</string>
    <string name="ui_2_minggu_67">2 Minggu</string>
    <string name="ui_judul_tugas_68">Judul Tugas</string>
    <string name="ui_deskripsi_tugas_69">Deskripsi tugas...</string>
    <string name="ui_title_hasil_asesmen_amp_penilaian_100">Hasil Asesmen &amp;amp; Penilaian</string>
    <string name="ui_title_daftar_bahan_kajian_101">Daftar Bahan Kajian</string>
    <string name="ui_title_data_cpl_102">Data CPL</string>
    <string name="ui_title_cek_lokasi_kehadiran_103">Cek Lokasi Kehadiran</string>
    <string name="ui_title_pemetaan_mapping_104">Pemetaan (Mapping)</string>
    <string name="ui_title_data_mata_kuliah_105">Data Mata Kuliah</string>
    <string name="ui_title_detail_mata_kuliah_106">Detail Mata Kuliah</string>
    <string name="ui_title_catatan_pribadi_offline_107">Catatan Pribadi (Offline)</string>
    <string name="ui_title_data_program_studi_108">Data Program Studi</string>
    <string name="ui_title_detail_program_studi_109">Detail Program Studi</string>
    <string name="ui_title_rps_amp_sub_cpmk_110">RPS &amp;amp; Sub-CPMK</string>
    <string name="ui_title_rencana_tugas_mandiri_rtm_111">Rencana Tugas Mandiri (RTM)</string>
    <string name="ui_title_pengaturan_profil_112">Pengaturan Profil</string>
</resources>